# github-insights-engine

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb
src/: analyze.py  fetch.py  main.py  visualize.py
